# clp-structured

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: FindANTLR.cmake
src/clp_structured/: .clang-format  .clang-tidy  ArchiveReader.cpp  ArchiveReader.hpp  ArchiveWriter.cpp  ArchiveWriter.hpp  ColumnReader.cpp  ColumnReader.hpp  ColumnWriter.cpp  ColumnWriter.hpp  CommandLineArguments.cpp  CommandLineArguments.hpp  Compressor.hpp  Decompressor.hpp  Defs.hpp  DictionaryEntry.cpp  DictionaryEntry.hpp  DictionaryReader.hpp  DictionaryWriter.cpp  DictionaryWriter.hpp  ErrorCode.hpp  FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  JsonConstructor.cpp  JsonConstructor.hpp  JsonFileIterator.cpp  JsonFileIterator.hpp  JsonParser.cpp  JsonParser.hpp  ParsedMessage.hpp  ReaderUtils.cpp  ReaderUtils.hpp  SchemaMap.cpp  SchemaMap.hpp  SchemaReader.cpp  SchemaReader.hpp  SchemaTree.cpp  SchemaTree.hpp  (+22 more)
src/clp_structured/search/: AndExpr.cpp  AndExpr.hpp  BooleanLiteral.cpp  BooleanLiteral.hpp  CMakeLists.txt  ColumnDescriptor.cpp  ColumnDescriptor.hpp  ConstantProp.cpp  ConstantProp.hpp  ConvertToExists.cpp  ConvertToExists.hpp  DateLiteral.cpp  DateLiteral.hpp  EmptyExpr.cpp  EmptyExpr.hpp  EvaluateTimestampIndex.cpp  EvaluateTimestampIndex.hpp  Expression.cpp  Expression.hpp  FilterExpr.cpp  FilterExpr.hpp  FilterOperation.hpp  Integral.cpp  Integral.hpp  Literal.hpp  NarrowTypes.cpp  NarrowTypes.hpp  NullLiteral.cpp  NullLiteral.hpp  OrExpr.cpp  OrExpr.hpp  OrOfAndForm.cpp  OrOfAndForm.hpp  Output.cpp  Output.hpp  SchemaMatch.cpp  SchemaMatch.hpp  SearchUtils.cpp  SearchUtils.hpp  StringLiteral.cpp  (+3 more)
src/clp_structured/search/Kibana/: CMakeLists.txt  Kibana.cpp  Kibana.hpp
src/clp_structured/search/clp_search/: Defs.hpp  EncodedVariableInterpreter.cpp  EncodedVariableInterpreter.hpp  Grep.cpp  Grep.hpp  Query.cpp  Query.hpp  TmpUtils.cpp  TmpUtils.hpp  type_utils.hpp
tools/scripts/deps-download/: antlr4.json  download-all.sh  json.json  spdlog.json  test.sh
tools/scripts/lib_install/centos7.4/: README.md  install-packages-from-source.sh
tools/scripts/lib_install/macos-12/: README.md  install-all.sh
tools/scripts/lib_install/ubuntu-bionic/: install-packages-from-source.sh
tools/scripts/lib_install/ubuntu-focal-and-jammy/: README.md  install-packages-from-source.sh  install-prebuilt-packages.sh
