add_subdirectory(Kibana)

add_library(clp-s-search
        AndExpr.cpp
        AndExpr.hpp
        BooleanLiteral.cpp
        BooleanLiteral.hpp
        ColumnDescriptor.cpp
        ColumnDescriptor.hpp
        ConstantProp.cpp
        ConstantProp.hpp
        ConvertToExists.cpp
        ConvertToExists.hpp
        DateLiteral.hpp
        DateLiteral.cpp
        EmptyExpr.cpp
        EmptyExpr.hpp
        EvaluateTimestampIndex.cpp
        EvaluateTimestampIndex.hpp
        Expression.cpp
        Expression.hpp
        FilterExpr.cpp
        FilterExpr.hpp
        FilterOperation.hpp
        Integral.cpp
        Integral.hpp
        Literal.hpp
        NarrowTypes.cpp
        NarrowTypes.hpp
        NullLiteral.cpp
        NullLiteral.hpp
        OrExpr.cpp
        OrExpr.hpp
        OrOfAndForm.cpp
        OrOfAndForm.hpp
        Output.cpp
        Output.hpp
        SchemaMatch.cpp
        SchemaMatch.hpp
        SearchUtils.cpp
        SearchUtils.hpp
        StringLiteral.cpp
        StringLiteral.hpp
        Transformation.hpp
        Value.hpp
        clp_search/Defs.hpp
        clp_search/EncodedVariableInterpreter.cpp
        clp_search/EncodedVariableInterpreter.hpp
        clp_search/Grep.cpp
        clp_search/Grep.hpp
        clp_search/Query.cpp
        clp_search/Query.hpp
        clp_search/TmpUtils.hpp
        clp_search/type_utils.hpp
)

target_include_directories(clp-s-search PUBLIC "${PROJECT_SOURCE_DIR}")
target_link_libraries(clp-s-search PUBLIC clp-s-archive)
